--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <input type="button" value="Register Now">
         </form>
-        <p class="header">Already have an account?&nbsp;<a href="_login.html">Login</a></p>
+        <p class="header">Already have an account?&nbsp;<a href="login.html">Login</a></p>
     </div>
 </body>
 </html>
